# auth_service

./: docker-compose.yml  dockerfile  login.php  pyproject.toml  requirements.txt
accounts/: admin.py  models.py  serializers.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_alter_user_options_alter_user_managers_and_more.py
auth_service/: settings.py  urls.py
